CORA-681 ignore empty json